--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,25 @@
+:root {
+  --background: #F5F5F5;
+  --chat-font-color: #333;
+}
+
+:root.dark {
+  --background: #1A1A1A;
+  --chat-font-color: #fff;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  background-color: var(--background);
+  color: var(--chat-font-color);
+}
+
+.iconify {
+  font-size: 2.4rem;
 }
